@@ -168,7 +168,7 @@ public class DatabaseContext extends ThreadLocal<Map<String, DatabaseContext.Dat
     public TransactionContext getLastTransaction() {
       if (transactions.isEmpty())
         return null;
-      return transactions.get(transactions.size() - 1);
+      return transactions.getLast();
     }
 
     public void pushTransaction(final TransactionContext tx) {
@@ -184,9 +184,9 @@ public class DatabaseContext extends ThreadLocal<Map<String, DatabaseContext.Dat
         return null;
 
       if (transactions.size() > 1)
-        return transactions.remove(transactions.size() - 1);
+        return transactions.removeLast();
 
-      return transactions.get(0);
+      return transactions.getFirst();
     }
 
     public int getMaxNested() {
