@@ -79,7 +79,7 @@ public class SelectExecutionPlan implements InternalExecutionPlan {
   public void setSteps(final List<ExecutionStepInternal> steps) {
     this.steps = steps;
     if (steps.size() > 0) {
-      lastStep = steps.get(steps.size() - 1);
+      lastStep = steps.getLast();
     } else {
       lastStep = null;
     }
