@@ -90,7 +90,7 @@ public class ArrayConcatExpression extends SimpleNode {
   }
 
   public Object execute(final Identifiable iCurrentRecord, final CommandContext context) {
-    Object result = childExpressions.get(0).execute(iCurrentRecord, context);
+    Object result = childExpressions.getFirst().execute(iCurrentRecord, context);
     for (int i = 1; i < childExpressions.size(); i++) {
       result = apply(result, childExpressions.get(i).execute(iCurrentRecord, context));
     }
@@ -98,7 +98,7 @@ public class ArrayConcatExpression extends SimpleNode {
   }
 
   public Object execute(final Result iCurrentRecord, final CommandContext context) {
-    Object result = childExpressions.get(0).execute(iCurrentRecord, context);
+    Object result = childExpressions.getFirst().execute(iCurrentRecord, context);
     for (int i = 1; i < childExpressions.size(); i++) {
       result = apply(result, childExpressions.get(i).execute(iCurrentRecord, context));
     }
